[gd_scene load_steps=5 format=3 uid="uid://bxggrb52as5ef"]

[ext_resource type="FontFile" uid="uid://ckeslc7xh7auf" path="res://assets/Fonts/Super Shiny.ttf" id="1_60h3g"]
[ext_resource type="Script" path="res://losing_menu.gd" id="1_cgbhp"]

[sub_resource type="CanvasTexture" id="CanvasTexture_7jtsx"]

[sub_resource type="LabelSettings" id="LabelSettings_t4hrt"]
font = ExtResource("1_60h3g")
font_size = 62

[node name="Losing_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cgbhp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 2
layer = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
modulate = Color(0.180392, 0.180392, 0.180392, 1)
offset_left = -3.0
offset_right = 1149.0
offset_bottom = 647.0
scale = Vector2(1.06743, 1.10471)
texture = SubResource("CanvasTexture_7jtsx")

[node name="retry_button" type="Button" parent="CanvasLayer"]
offset_left = 424.0
offset_top = 222.0
offset_right = 518.0
offset_bottom = 253.0
scale = Vector2(3.09546, 3.09546)
text = "Reessayer?"

[node name="main_menu_button" type="Button" parent="CanvasLayer"]
offset_left = 375.0
offset_top = 373.0
offset_right = 500.0
offset_bottom = 404.0
scale = Vector2(3.03522, 3.03522)
text = "Menu principal"

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 281.0
offset_top = 70.0
offset_right = 845.0
offset_bottom = 117.0
text = "La mort t'as atteint :("
label_settings = SubResource("LabelSettings_t4hrt")

[node name="Leaderboard_button" type="Button" parent="CanvasLayer"]
offset_left = 114.0
offset_top = 533.0
offset_right = 514.0
offset_bottom = 564.0
scale = Vector2(2.23296, 2.23296)
text = "Entre ton score dans le Leaderboard!"
text_overrun_behavior = 2

[connection signal="pressed" from="CanvasLayer/retry_button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CanvasLayer/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Leaderboard_button" to="." method="_on_leaderboard_button_pressed"]
